# GWInSpect

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
examples/: demo.ipynb  tutorial_gwinspect.ipynb
src/gwinspect/: __init__.py  bg_constant.py  constants.py  constraint.py  constraints.py  convert.py  cosmo_tools.py  spectrum.py  thermo.py
src/gwinspect/data/: eff_rel_dof.txt
